@@ -1,3 +1,11 @@
+Tue, 17 Jun 2008 14:49:12 +0200 <thp@perli.net>
+Make handling pubDates a bit safer when reading it externally
+
+	* src/gpodder/libpodcasts.py: Make handling of pubDates a bit more
+	secure and easier
+	* src/gpodder/gui.py: Add Daniel Ramos to list of donators and bug
+	reporters
+
 Sun, 15 Jun 2008 14:44:29 +0200 <thp@perli.net>
 Merge "Allows user command execution after certain events" from Paul Rudkin
 
